Added Search By Category

--- a/Solution3/PresentationWebApp/Views/Products/Index.cshtml
+++ b/Solution3/PresentationWebApp/Views/Products/Index.cshtml
@@ -10,7 +10,10 @@
 
 <div class="container">
     <div class="row">
+     @Html.Partial("SearchPartial", Model);
+    </div>
 
+    <div class="row">
      @Html.Partial("ViewProductsPartial", Model)
     </div>
 </div>
