--- a/Solution3/PresentationWebApp/Views/Shared/ViewProductsPartial.cshtml
+++ b/Solution3/PresentationWebApp/Views/Shared/ViewProductsPartial.cshtml
@@ -9,13 +9,20 @@
             <div class="card-body">
                 <h5 class="card-title">@p.Name</h5>
                 <p class="card-text">@p.Price</p>
-                <a href="/Products/Details?id=@p.Id" class="btn btn-primary">View Specification</a>
-
-                @if (User.IsInRole("Admin"))
-                {
-                    <a href="/Products/Delete?id=@p.Id" class="btn btn-danger">Delete</a>
-                }
-
+                <div class="row">
+                    <div class="col">
+                        <a href="/Products/Details?id=@p.Id" class="btn btn-primary">View Specification</a>
+                    </div>
+                    <div class="col">
+                        <a class="btn btn-success">Add To Cart</a>
+                    </div>
+                    <div class="col mt-2">
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <a href="/Products/Delete?id=@p.Id" class="btn btn-danger">Delete</a>
+                        }
+                    </div>
+                </div>             
             </div>
         </div>
     </div>
