--- a/Solution3/PresentationWebApp/Views/Shared/SearchPartial.cshtml
+++ b/Solution3/PresentationWebApp/Views/Shared/SearchPartial.cshtml
@@ -1,9 +1,4 @@
-﻿
-@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
-
-<div class="col">
+﻿<div class="col">
     <form method="post" action="/Products/Search">
         <div class="form-group mb-2">
             <label class="control-label">Category: </label>
