--- a/Solution3/PresentationWebApp/Views/Products/Index.cshtml
+++ b/Solution3/PresentationWebApp/Views/Products/Index.cshtml
@@ -1,22 +1,24 @@
 ﻿@model IEnumerable<ShoppingCart.Application.ViewModels.ProductViewModel>
 
 
-@{
-    ViewData["Title"] = "Index";
-}
+@{ ViewData["Title"] = "Index"; }
 
 <h1>Products Catalogue</h1>
 
 
 <div class="container">
     <div class="row">
-     @Html.Partial("SearchPartial", Model);
+        @Html.Partial("SearchPartial", Model)
     </div>
 
     <div class="row">
-     @Html.Partial("ViewProductsPartial", Model)
+        @Html.Partial("ViewProductsPartial", Model)
+    </div>
+
+    <div class="ml-auto mt-3">
+        @Html.Partial("PaginationPartial", Model)
     </div>
 </div>
 
- 
+
 
