Added 2 Factor Authentication and and Input Validation

--- a/Solution3/PresentationWebApp/Views/Products/Index.cshtml
+++ b/Solution3/PresentationWebApp/Views/Products/Index.cshtml
@@ -19,9 +19,9 @@
         @Html.Partial("PaginationPartial", Model)
     </div>
 
-    <div class="row">
+    @*<div class="row">
         <a href="/Products/ShoppingCart?list=@ViewBag.productsList" class="btn btn-block btn-primary">View Shopping Cart</a>
-    </div>
+    </div>*@
 </div>
 
 
