--- a/Solution3/PresentationWebApp/Views/Products/Create.cshtml
+++ b/Solution3/PresentationWebApp/Views/Products/Create.cshtml
@@ -49,6 +49,12 @@
                 <span asp-validation-for="Category.Id" class="text-danger"></span>
             </div>
 
+            <div class="form-group">
+                <label asp-for="Stock" class="control-label"></label>
+                <input type="number" asp-for="Stock" class="form-control"></input>
+                <span asp-validation-for="Stock" class="text-danger"></span>
+            </div>
+
 
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
