Removed Delete Button

--- a/Solution3/PresentationWebApp/Views/Products/Create.cshtml
+++ b/Solution3/PresentationWebApp/Views/Products/Create.cshtml
@@ -30,7 +30,7 @@
             <div class="form-group">
                 <label class="control-label">Image Url</label>
                 <input asp-for="ImageUrl" class="form-control" />
-
+                <label class="control-label">Or</label>
                 <input name="f" class="form-control" type="file" />
 
 
