--- a/Solution3/PresentationWebApp/Views/Shared/ViewProductsPartial.cshtml
+++ b/Solution3/PresentationWebApp/Views/Shared/ViewProductsPartial.cshtml
@@ -44,9 +44,8 @@
                             }
                             else
                             {
-                                <a href="/Products/DisableOrEnable?id=@p.Id" class="btn btn-sm btn-warning mt-2">Disable</a>
+                                <a href="/Products/DisableOrEnable?id=@p.Id" class="btn btn-sm btn-danger mt-2">Disable</a>
                             }
-                            <a href="/Products/Delete?id=@p.Id" class="btn btn-sm btn-danger mt-2">Delete</a>
                         }  
                     }
 
@@ -100,9 +99,8 @@
                             }
                             else
                             {
-                                <a href="/Products/DisableOrEnable?id=@p.Id" class="btn btn-sm btn-warning mt-2">Disable</a>
+                                <a href="/Products/DisableOrEnable?id=@p.Id" class="btn btn-sm btn-danger mt-2">Disable</a>
                             }
-                            <a href="/Products/Delete?id=@p.Id" class="btn btn-sm btn-danger mt-2">Delete</a>
                         }  
                     }
 
