--- a/Solution3/PresentationWebApp/Views/Shared/_Layout.cshtml
+++ b/Solution3/PresentationWebApp/Views/Shared/_Layout.cshtml
@@ -24,9 +24,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
 
-                        @*<li class="nav-item">
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">View Products</a>
-                        </li>*@
+                        </li>
                         @if (User.IsInRole("Admin"))
                         {
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Create">Add Product</a>
@@ -60,7 +60,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - PresentationWebApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - ShoppingCartApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
   
